k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: three-tier
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'    

spec:
  ingressClassName: alb
  rules:
  # - host: <Host>
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: backend-svc
            port: 
              number: 3500
      
      - path: /healthz
        pathType: Exact
        backend:
          service:
            name: backend-svc
            port:
              number: 3500
      - path: /ready
        pathType: Exact
        backend:
          service:
            name: backend-svc
            port:
              number: 3500
      - path: /started
        pathType: Exact
        backend:
          service:
            name: backend-svc
            port:
              number: 3500

      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-svc
            port: 
              number: 3000
